[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/GameUI.gd" id="1_5j7v8"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_5j7v8")

[node name="GodPowersPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -200.0
offset_right = 320.0
offset_bottom = -10.0

[node name="VBox" type="VBoxContainer" parent="GodPowersPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="GodPowersPanel/VBox"]
layout_mode = 2
text = "GOD POWERS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="GodPowersPanel/VBox"]
layout_mode = 2

[node name="FireCountLabel" type="Label" parent="GodPowersPanel/VBox"]
layout_mode = 2
text = "Active Fires: 0"

[node name="HSeparator2" type="HSeparator" parent="GodPowersPanel/VBox"]
layout_mode = 2

[node name="InstructionsLabel" type="RichTextLabel" parent="GodPowersPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Instructions will appear here"
fit_content = true

[node name="WorldInfoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 400.0

[node name="VBox" type="VBoxContainer" parent="WorldInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="WorldInfoPanel/VBox"]
layout_mode = 2
text = "WORLD INFO"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="WorldInfoPanel/VBox"]
layout_mode = 2

[node name="WorldStatsLabel" type="RichTextLabel" parent="WorldInfoPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "World stats will appear here"
fit_content = true